force-app/main/default/objects/JBCXM__GSTranslation__c/JBCXM__GSTranslation__c.object-meta.xml
<CustomObject>
    <description>This object to store static texts in different languages</description>
    <label>Translation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>