force-app/main/default/objects/JBCXM__GSTranslation__c/fields/JBCXM__Category__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>