force-app/main/default/objects/JBCXM__GSTranslation__c/fields/JBCXM__Language__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Language__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Language</label>
    <referenceTo>JBCXM__GSLanguage__c</referenceTo>
    <relationshipLabel>Translation language</relationshipLabel>
    <relationshipName>TranslationLanguage</relationshipName>
    <type>Lookup</type>
</CustomField>