force-app/main/default/objects/JBCXM__GSTranslation__c/fields/JBCXM__Text__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Text__c</fullName>
    <label>Original text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>