force-app/main/default/objects/JBCXM__GSTranslation__c/fields/JBCXM__TranslationFor__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TranslationFor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Language</label>
    <referenceTo>JBCXM__GSTranslation__c</referenceTo>
    <relationshipLabel>Translation For</relationshipLabel>
    <relationshipName>TranslationFor</relationshipName>
    <type>Lookup</type>
</CustomField>