force-app/main/default/objects/JBCXM__GSTranslation__c/fields/JBCXM__UID__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UID__c</fullName>
    <label>Unique identifier category wise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>